# vs-rpi-cmake

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
cmake/: aarch64-toolchain.cmake  arm32-toolchain.cmake
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  main.cpp
src/glsl/: depth.frag  depth.vert  raymarch.frag  simple.frag  simple.vert  voxel.frag  voxel.vert  voxmarch.frag  voxmarch.vert
src/graphics/: mesh.cpp  mesh.h  shader.cpp  shader.h
